# dcmfx-playground

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  main.css
.github/workflows/: deploy.yml
assets/: dcmfx_playground-3e2513873b457e39.js  dcmfx_playground-3e2513873b457e39.js.br  dcmfx_playground-a10b0aa619039047.js  dcmfx_playground-a10b0aa619039047.js.br  dcmfx_playground-dxhaf08a2f19fb067.js  dcmfx_playground_bg-665b12566bbc14aa.wasm.br  dcmfx_playground_bg-78b24fb49d8fd199.wasm  dcmfx_playground_bg-78b24fb49d8fd199.wasm.br  logo-8c082905986b70f9.svg.br  main-9587f117f2e8104d.css  main-9587f117f2e8104d.css.br  main-dxh3d8f91562b17f20.css  main.scss
assets/dioxus/: dcmfx_playground.js  dcmfx_playground.js.br  dcmfx_playground_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-d20e126dfa95ef37/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-ec619651cd4d8de4/: inline0.js  inline0.js.br
src/: data_set_grid.rs  drop_area.rs  main.rs  pixel_data_frame_view.rs
src/ui/: font_awesome_icon.rs  mod.rs  toasts.rs
src/utils/: canvas.rs  download.rs  mod.rs
wasm/: dcmfx_playground.d.ts  dcmfx_playground.d.ts.br  dcmfx_playground.js  dcmfx_playground.js.br  dcmfx_playground_bg.wasm.br  dcmfx_playground_bg.wasm.d.ts  dcmfx_playground_bg.wasm.d.ts.br
wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
