[package]
name = "dcmfx_playground"
version = "0.0.0"
description = "DCMfx Playground"
license = "AGPL-3.0-only"
repository = "https://github.com/dcmfx/dcmfx-playground"
edition = "2021"

[dependencies]
dcmfx = { git = "https://github.com/dcmfx/dcmfx", tag = "v0.4.0" }
dioxus = { version = "0.6.0", features = ["web"] }
dioxus-fullstack = "0.6.0"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
indexmap = "2.7.0"
js-sys = "0.3.76"
scopeguard = "1.2.0"
serde = "1.0.215"
tokio = { version = "1.42.0", features = ["time"] }
web-sys = { version = "0.3.76", features = [
    "BlobPropertyBag",
    "HtmlCanvasElement",
    "Url",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlVertexArrayObject"
] }

# The code in dcmfx_core::registry exceeds WASM's locals limit if not optimized,
# so always optimize that package
[profile.dev.package.dcmfx_core]
opt-level = "z"

[profile.release]
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
