[package]
name = "dcmfx_playground"
version = "0.0.0"
description = "DCMfx Playground"
license = "AGPL-3.0-only"
repository = "https://github.com/dcmfx/dcmfx-playground"
edition = "2024"

[dependencies]
dcmfx = { git = "https://github.com/dcmfx/dcmfx", tag = "v0.40.1", default-features = false, features = [
    "pixel_data_native",
] }
dioxus = { version = "0.7.1", features = ["web"] }
dioxus-fullstack = "0.7.1"
gloo-timers = { version = "0.3.0", features = ["futures"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
indexmap = "2.12.1"
js-sys = "0.3.83"
scopeguard = "1.2.0"
serde = "1.0.228"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
    "BlobPropertyBag",
    "ImageData",
    "ImageBitmap",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Url",
] }

# The code in dcmfx_core::registry exceeds WASM's locals limit if not optimized,
# so always optimize that package
[profile.dev.package.dcmfx_core]
opt-level = "z"

[profile.release]
lto = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
